<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/app_name"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_bill_history"
        android:name="com.example.espark.ui.billHistory.BillHistory"
        android:label="@string/bill_history_bar"
        tools:layout="@layout/fragment_bill_history" />
    <fragment
        android:id="@+id/nav_warranty_manager"
        android:name="com.example.espark.ui.warrantyManager.warrantyManager"
        android:label="Warranty Manager"
        tools:layout="@layout/fragment_warranty_manager" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.espark.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_unit_converter"
        android:name="com.example.espark.ui.unitConverter.UnitConverter"
        android:label="@string/unit_converter_bar"
        tools:layout="@layout/fragment_unit_converter" />
    <fragment
        android:id="@+id/nav_bill_calculator"
        android:name="com.example.espark.ui.billcalculator.billcalculator"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_billcalculator" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.espark.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.espark.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_power_calculator"
        android:name="com.example.espark.ui.powerconsumptioncalc.PowerConsumptionCalc"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_power_consumption_calc" />
</navigation>