<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/billCal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sixty_color"
    android:saveEnabled="true"
    tools:context=".ui.billcalculator.billcalculator">

    <TextView
        android:id="@+id/calcTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_title_layout_height"
        android:background="@color/thirty_color"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/bill_cal_title"
        android:textAlignment="center"
        android:textColor="@color/ten_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calTV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_txt_view_margin_start"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/consume_type"
        android:textColor="@color/thirty_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Spinner
        android:id="@+id/cusType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:entries="@array/customer_type"
        android:minWidth="300dp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/calTV2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calTV1" />

    <TextView
        android:id="@+id/calTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_txt_view_margin_start"
        android:layout_marginTop="@dimen/main_txt_view_margin_top"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/last_reading"
        android:textColor="@color/thirty_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calEdtText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cusType" />

    <EditText
        android:id="@+id/calEdtText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cal_hint"
        android:inputType="number"
        android:minHeight="50dp"
        android:textColor="@color/thirty_color"
        app:layout_constraintBottom_toTopOf="@+id/calTV3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calTV2" />

    <TextView
        android:id="@+id/calTV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_txt_view_margin_start"
        android:layout_marginTop="@dimen/main_txt_view_margin_top"
        android:fontFamily="@font/poppins_regular"
        android:minHeight="50dp"
        android:text="@string/curr_reading"
        android:textColor="@color/thirty_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calEdtText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calEdtText1" />

    <EditText
        android:id="@+id/calEdtText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cal_hint"
        android:inputType="number"
        android:minHeight="50dp"
        android:textColor="@color/thirty_color"
        app:layout_constraintBottom_toTopOf="@+id/calBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calTV3" />

    <Button
        android:id="@+id/calBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/thirty_color"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/cal_btn"
        android:textColor="@color/ten_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calEdtText2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcTitle"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>